readme multi-language

--- a/package/_locales/zh_CN/messages.json
+++ b/package/_locales/zh_CN/messages.json
@@ -3,7 +3,7 @@
         "message": "小窗口视频 by c4r"
     },
     "appDescription": {
-        "message": "原油猴脚本“小窗口视频”的超级增强版，https://greasyfork.org/en/scripts/377497-%E5%B0%8F%E7%AA%97%E5%8F%A3%E8%A7%86%E9%A2%91-bili-mgtv-youtube"
+        "message": "原油猴脚本“小窗口视频”的超级增强版, https://greasyfork.org/en/scripts/377497-%E5%B0%8F%E7%AA%97%E5%8F%A3%E8%A7%86%E9%A2%91-bili-mgtv-youtube"
     },
     "backward": {
         "message": "后退"
