feat: add exit and reopen Picture-in-Picture mode shortcut settings

--- a/package/_locales/en/messages.json
+++ b/package/_locales/en/messages.json
@@ -17,6 +17,12 @@
     "volumeDown": {
         "message": "volume down"
     },
+    "exit": {
+        "message": "exit Picture-in-Picture mode"
+    },
+    "reopen": {
+        "message": "reopen Picture-in-Picture mode"
+    },
     "playPause": {
         "message": "play and pause"
     },
